fix(scroll): resolve ScrollSmoother layout issue
桌機版使用 gsap 的 ScrollSmoother，該 smoother 會強制將他的 children
變成 position: fixed，導致放在後面的 element 會被 position: fixed
的元素給影響，無法在正確的位置上滾動。
此 PR 用 workaround 的方式解決此問題，當 smoother 滑到底時，會被改成
position: relative，讓後面的 element 可以正常滑動。

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,6 +26,10 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+body.scroll-lock-multimedia-loadcrsis {
+  overflow: hidden;
+}
+
 :root {
   --text-xs: 0.75rem;
   --text-sm: 0.875rem;
